package worldofzuul;

import java.util.Arrays;
import java.util.Observable;

public class PlayerInventory extends Inventory {

    public PlayerInventory(int size) {
        super(size);
    }

    @Override
    public String toString() {
        return toString();
    }
}
